Added SH2 page.

--- a/smtpersonalsite/p5r.html
+++ b/smtpersonalsite/p5r.html
@@ -78,7 +78,7 @@
                 story of Persona, you will meet people that join your team, but the game doesn't permit you to have more than 4 people in combat at 
                 the same time. You can usually swap out party members at any time.</p>
         </section>
-        <section>
+        <section class="p5r-review">
             <h2>The Review</h2>
             <p>Now, I said I would review this game as fairly as possible. It is my favorite Megami Tensei game. Persona 5 has an amazing story, 
                 graphics, soundtrack (available on Spotify), and almost all of the characters are well-written and loveable with a significant amount of 
