Added css (minus images)

--- a/smtpersonalsite/index.html
+++ b/smtpersonalsite/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Site | Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
@@ -16,9 +17,9 @@
             <a href="sh2.html">Soul Hackers 2</a>
         </nav>
     </header>
-    <main>
-        <section id="title">
-            <h1>Home Page</h1>
+    <main class="everything">
+        <section id="title-id">
+            <h1 class="title">Home Page</h1>
         </section>
         <section class="purpose">
             <img class="first-image" src="images/smt-cool.jpg" alt="First Image">
