--- a/smtpersonalsite/p5r.html
+++ b/smtpersonalsite/p5r.html
@@ -5,20 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Persona 5 Royal</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <header>
+<body class="body-p5r">
+    <header class="header-p5r">
         <img class="logo" src="images/smt-logo.jfif" alt="Megaten Logo">
-        <nav>
+        <nav class="nav-p5r">
             <a href="index.html">Home</a>
             <a href="smtv.html">Shin Megami Tensei V</a>
             <a href="p5r.html">Persona 5 Royal</a>
             <a href="sh2.html">Soul Hackers 2</a>
         </nav>
     </header>
-    <main>
-        <section id="title">
-            <h1>Persona 5 Royal</h1>
+    <main class="everything">
+        <section id="title-id">
+            <h1 class="title-p5r">Persona 5 Royal</h1>
         </section>
         <section class="personaexplanation">
             <img class="p5r-cover" src="images/p5r-cover.jpg" alt="P5R Cover Art">
@@ -113,7 +114,7 @@
 
     </main>
 
-    <footer>
+    <footer class="footer-p5r">
         <p>BYUI WDD130 Personal Site 2023 - Phoenix Pina</p>
         <p><a href="site-plan-personal.html">Site Plan</a></p>
         <p><a href="index.html">Home</a></p>
