--- a/smtpersonalsite/sh2.html
+++ b/smtpersonalsite/sh2.html
@@ -5,20 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soul Hackers 2</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <header>
+<body class="body-sh2">
+    <header class="header-sh2">
         <img class="logo" src="images/smt-logo.jfif" alt="Megaten Logo">
-        <nav>
+        <nav class="nav-sh2">
             <a href="index.html">Home</a>
             <a href="smtv.html">Shin Megami Tensei V</a>
             <a href="p5r.html">Persona 5 Royal</a>
             <a href="sh2.html">Soul Hackers 2</a>
         </nav>
     </header>
-    <main>
-        <section id="title">
-            <h1>Soul Hackers 2</h1>
+    <main class="everything">
+        <section id="title-id">
+            <h1 class="title">Soul Hackers 2</h1>
         </section>
         <section class="sh2-explanation">
             <img class="sh2-cover" src="images/sh2-cover.jpg" alt="SH2 Cover Art">
@@ -98,7 +99,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer-sh2">
         <p>BYUI WDD130 Personal Site 2023 - Phoenix Pina</p>
         <p><a href="site-plan-personal.html">Site Plan</a></p>
         <p><a href="index.html">Home</a></p>
