--- a/smtpersonalsite/smtv.html
+++ b/smtpersonalsite/smtv.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shin Megami Tensei V</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
@@ -16,9 +17,9 @@
             <a href="sh2.html">Soul Hackers 2</a>
         </nav>
     </header>
-    <main>
-        <section id="title">
-            <h1>Shin Megami Tensei V</h1>
+    <main class="everything">
+        <section id="title-id">
+            <h1 class="title">Shin Megami Tensei V</h1>
         </section>
         <section class="smtv-good">
             <img class="smtv-cover" src="images/smtv-cover.png" alt="SMTV Cover Art">
