Added images in css.

--- a/smtpersonalsite/index.html
+++ b/smtpersonalsite/index.html
@@ -59,7 +59,7 @@
         </section>
         <section class="demons">
             <h2>What Demons Are (in this series)</h2>
-            <img class="demons" src="images/demons.jpg" alt="Demons">
+            <img class="demons-image" src="images/demons.jpg" alt="Demons">
             <p>Now, demons in this game series refers to any supernatural entity that is capable of interferring with human life. Demons take 
                 on the form of entities from a lot of mythologies on earth. There's powerful Japanese gods such as Izanagi, awesome youkai such 
                 as Ippon-Datara, Chinese entities such as Feng Huang, American cryptids like the elusive Mothman, Native American beasts like the Thunderbird,
