--- a/smtpersonalsite/p5r.html
+++ b/smtpersonalsite/p5r.html
@@ -24,7 +24,7 @@
         <section class="personaexplanation">
             <img class="p5r-cover" src="images/p5r-cover.jpg" alt="P5R Cover Art">
 
-            <video class="life-will-change" controls=""  name="media"><source src="audio/life-will-change.mp3" type="audio/mpeg"></video>
+            <video class="life-will-change" controls=""><source src="audio/life-will-change.mp3" type="audio/mpeg"></video>
             <p class="p5r-intro">Persona 5 Royal cover art and the song "Life Will Change" from the official soundtrack</p>
             <p>Persona 5, released in September 2016 in Japan and April 2017 worldwide, is the most famous Megami Tensei game of 
                 the franchise, despite being a part of the spinoff series "Persona". Many people may recognize the main character 
