--- a/smtpersonalsite/index.html
+++ b/smtpersonalsite/index.html
@@ -37,6 +37,8 @@
         <section class="series-explanation">
             <h2>What Megami Tensei Is</h2>
             <img class="smt1-poster" src="images/shin-megami-tensei.jpg" alt="SMT 1 Poster">
+            <video class="ginza" controls=""><source src="audio/ginza.mp3" type="audio/mpeg"></video>
+            <p class="megaten-label">Shin Megami Tensei 1 poster and the song "Ginza" from the same soundtrack.</p>
             <p>Megami Tensei is a series of Japanese role playing games. It began as a trio of books, the first one
                 released in 1984, and the game Digital Devil Story: Megami Tensei (which was based on the books) was 
                 released in 1987 for the Famicom. The series is commonly referred to as "Megaten" by the fanbase, but is also commonly
@@ -56,10 +58,14 @@
                 means a lot of the same concepts, a lot of the same combat mechanics, and many of the same demons.
             </p>
             <img class="persona1-image" src="images/persona.jpg" alt="Persona 1 Image">
+            <video class="velvet-room" controls=""><source src="audio/velvet-room.mp3" type="audio/mpeg"></video>
+            <p class="velvet-label">Persona 1 artwork and the song for the Velvet Room, which appears in every Persona game.</p>
         </section>
         <section class="demons">
             <h2>What Demons Are (in this series)</h2>
             <img class="demons-image" src="images/demons.jpg" alt="Demons">
+            <video class="cathedral" controls=""><source src="audio/cathedral.mp3" type="audio/mpeg"></video>
+            <p class="cathedral-label">Collage of demons along with SMT IV's version of the Cathedral of Shadows song.</p>
             <p>Now, demons in this game series refers to any supernatural entity that is capable of interferring with human life. Demons take 
                 on the form of entities from a lot of mythologies on earth. There's powerful Japanese gods such as Izanagi, awesome youkai such 
                 as Ippon-Datara, Chinese entities such as Feng Huang, American cryptids like the elusive Mothman, Native American beasts like the Thunderbird,
@@ -80,6 +86,7 @@
         <section class="combat">
             <h2>Combat Mechanics</h2>
             <img class="smt1-combat" src="images/smt1-combat.jpg" alt="SMT1 Combat">
+            <p class="smt1-combat-label">Example image of combat in Shin Megami Tensei 1 (1992) for the SNES console.</p>
             <p>Almost every Megaten game has turn-based combat gameplay. Since Pokémon is more popular, it is easy to compare this gameplay 
                 to Pokémon. Enemies are encountered through random encounters- as you explore the various areas and dungeons you may enter battle. 
                 Battles are like Pokémon battles, except each side usually has up to 4 combatants, and the main character fights alongside their 
