--- a/smtpersonalsite/p5r.html
+++ b/smtpersonalsite/p5r.html
@@ -23,9 +23,8 @@
         </section>
         <section class="personaexplanation">
             <img class="p5r-cover" src="images/p5r-cover.jpg" alt="P5R Cover Art">
-
             <video class="life-will-change" controls=""><source src="audio/life-will-change.mp3" type="audio/mpeg"></video>
-            <p class="p5r-intro">Persona 5 Royal cover art and the song "Life Will Change" from the official soundtrack</p>
+            <p class="p5r-label">Persona 5 Royal cover art and the song "Life Will Change" from the official soundtrack.</p>
             <p>Persona 5, released in September 2016 in Japan and April 2017 worldwide, is the most famous Megami Tensei game of 
                 the franchise, despite being a part of the spinoff series "Persona". Many people may recognize the main character 
                 "Joker" from Super Smash Bros. Ultimate. Obviously this is not the Joker from Batman. "Joker" is the codename given 
@@ -37,6 +36,7 @@
                 game simply because it is the most popular Megaten game.</p>
 
             <img class="persona-mcs" src="images/persona-characters.jpg" alt="Persona Main Characters">
+            <p class="persona-mc-label">Artwork of all of the playable main characters from the Persona series.</p>
             <p>Now, the following brief explanation of the Persona series mainly applies to Personas 3, 4, and 5. While some of these 
                 features apply to the old Persona games, Persona 3 was the first game to apply some of the features Persona is known for. 
                 Personas are, as simply as I can put it, spirits that fight alongside a person. They represent a manifestation of a person's 
@@ -47,6 +47,7 @@
                 of their Personas.</p>
 
             <img class="persona-life" src="images/p5r-life.jpg" alt="P5R Daily Life">
+            <p class="p5r-daily-label">Example image of daily life in the overworld of Persona 5 Royal.</p>
 
             <p>Something unique about Persona is that during the game, you go through a year of high school in Japan. It takes place in modern-day Japan, 
                 not post-apocalyptic Japan. You have a calendar, 
@@ -62,6 +63,8 @@
                 is known as New Game+ such as money, equipment, registered obtained Personas, social stats, and in-game achievements.</p>
 
             <img class="persona-combat" src="images/p5r-battle.jpg" alt="Persona 5 Combat">
+            <video class="take-over" controls=""><source src="audio/take-over.mp3" type="audio/mpeg"></video>
+            <p class="p5r-combat-label">Example image of combat with the song "Take Over", one of the combat themes added to Royal.</p>
 
             <p>Now for combat. In Persona, you can opt to enter a dungeon during a time slot (in Persona 5, it is during the afternoon).
                 Why you have to enter dungeons depends on the specific game, but in Persona 5, you and your friends are capable of entering somewhere 
@@ -85,7 +88,7 @@
         <section class="p5r-review">
             <h2>The Review</h2>
             <p>Now, I said I would review this game as fairly as possible. It is my favorite Megami Tensei game. Persona 5 has an amazing story, 
-                graphics, soundtrack (available on Spotify), and almost all of the characters are well-written and loveable with a significant amount of 
+                graphics, upbeat and awesome soundtrack (available on Spotify), and almost all of the characters are well-written and loveable with a significant amount of 
                 development. The controls are fluid and the dungeons are super fun to explore and fight in. I didn't go too into depth on how dungeon exploration 
                 works on this page, but it's something that is easy to learn in-game. The art style is very beautiful and fairly unique, and the visual effects 
                 during combat are very appealing and the party members dynamically talk and communicate while exploring and fighting. 
