--- a/smtpersonalsite/sh2.html
+++ b/smtpersonalsite/sh2.html
@@ -42,6 +42,8 @@
                 god and to seek vengeance.</p>
 
             <img class="sh2-combat" src="images/sh2-battle.jpg" alt="SH2 Battle">
+            <video class="matrix-boss" controls=""><source src="audio/matrix-boss.mp3" type="audio/mpeg"></video>
+            <p class="sh2-combat-label">Example image of combat with one of the battle themes from this game. Song has a 30-40 second long intro.</p>
 
             <p>Like in Persona, you fight alongside your teammates, but it is always the same 4 party members: Ringo and the 3 summoners. All 
                 4 can equip demons like a Persona main character equips Personas, and everyone's attacks, stats, and weaknesses/resistances are 
@@ -52,6 +54,8 @@
                 but a little less dynamic and roaming demons look like generic digital monsters.</p>
 
             <img class="sh2-city" src="images/sh2-city.jpg" alt="SH2 City">
+            <video class="mansei-realm" controls=""><source src="audio/mansei-realm.mp3" type="audio/mpeg"></video>
+            <p class="mansei-label">Example image of the overworld in Soul Hackers 2 with one of the songs that plays in the city.</p>
 
             <p>You travel to areas by selecting where to go in an overhead map of Tokyo. Some areas are dungeons, and some areas are 
                 safe areas of neon-lit Tokyo where you can shop and take side quests. You are also able to invite party members to hang out at a 
@@ -90,9 +94,9 @@
 
             <p>I do believe that Soul Hackers 2 is a fair game overall. If you want a glamourous turn-based JRPG to play with a group 
                 of cool devil summoners, this game will fit the bill. I had a good time playing this game, and if you want to play but don't want to spend 
-                so much time grinding in repetitive dungeons, do what I do with games sometimes and put on YouTube videos or Twitch streams while playing 
-                though the more dull portions of the game. Plus, if you buy the physical copy of this game, it comes with these 5 holographic cards 
-                with the party member on it. A pretty nice surpise. 
+                so much time grinding in repetitive dungeons, do what I do with games sometimes and put on YouTube videos or Twitch streams in the background
+                while playing through the more dull portions of the game. Plus, if you buy the physical copy of this game, it comes with these 5 holographic cards 
+                with each party member on them. A pretty nice surpise. 
             </p>
 
             <img class="sh2-final-image" src="images/sh2-final-image.png" alt="SH2 Final Image">
