--- a/smtpersonalsite/smtv.html
+++ b/smtpersonalsite/smtv.html
@@ -36,6 +36,8 @@
                 I will discuss what I believe the game did well and... not well. Let's start with the good.</p>
 
             <img class="smtv-overworld" src="images/smtv-overworld.jpg" alt="SMTV Overworld">
+            <video class="konan" controls=""><source src="audio/da'at-konan.mp3" type="audio/mpeg"></video>
+            <p class="konan-label">Example image of the overworld along with one of the overworld songs from the soundtrack.</p>
 
             <p>The graphics are outstanding. People tend to make fun of the Nintendo Switch's graphics and ability to run 
                 games, but this game looks great, both in battle and outside. Outside of battle, the game is semi-open world. 
@@ -47,6 +49,8 @@
                 and battle music are very good, pleasant to listen to, and can be found on Spotify. </p>
 
             <img class="smtv-combat" src="images/smtv-battle.jpg" alt="SMTV Combat">
+            <video class="smtv-boss" controls=""><source src="audio/blocked-name-boss.mp3" type="audio/mpeg"></video>
+            <p class="smtv-combat-label">Example image of SMTV's combat along with my personal favorite boss theme from this game. Song has a 25 second long intro.</p>
 
             <p>In combat, not only does the game look good, but the combat is fun. In the Shin Megami Tensei games, there is something 
                 called the "Press Turn" system. Basically, you have 1 action for each party member you have (your party consists of 
